@@ -1,0 +1,19 @@
+// SPDX-License-Identifier: GPL-2.0-or-later
+// Copyright The Music Player Daemon Project
+
+#include "AddedSinceSongFilter.hxx"
+#include "LightSong.hxx"
+#include "time/ISO8601.hxx"
+#include "util/StringBuffer.hxx"
+
+std::string
+AddedSinceSongFilter::ToExpression() const noexcept
+{
+	return std::string("(added-since \"") + FormatISO8601(value).c_str() + "\")";
+}
+
+bool
+AddedSinceSongFilter::Match(const LightSong &song) const noexcept
+{
+	return song.added >= value;
+}
